--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,17 @@ __pycache__/
 *.dll
 *.dylib
 *.egg-info/
+.eggs/
 .pytest_cache/
 .mypy_cache/
 .ruff_cache/
 .venv/
 venv/
+dist/
+build/
+.coverage
+coverage/
+htmlcov/
 .env
 .DS_Store
 *.log
